--- a/index.html
+++ b/index.html
@@ -62,41 +62,42 @@
 
     <!-- ===== MENU ===== -->
     
-<!-- BOTONES debajo del video -->
-<div class="menu-tiles">
+<!-- ===== MENU (BOTONES debajo del video) ===== -->
+<div class="menu-tiles" id="homeMenu">
   <a class="tile tile-row" href="merch.html" id="btnMerch">
-    <div class="tile-left">
-      <div class="badge">🛍️</div>
-      <div class="tile-text">
-        <div class="tile-title" id="merchTitle">Merch</div>
-        <div class="tile-sub" id="merchSub">Shirts &amp; flash drives</div>
-      </div>
+    <div class="badge" aria-hidden="true">🛍️</div>
+
+    <div class="tile-text">
+      <div class="tile-title" id="merchTitle">Merch</div>
+      <div class="tile-sub" id="merchSub">Shirts &amp; flash drives</div>
     </div>
-    <div class="chev">›</div>
+
+    <div class="chev" aria-hidden="true">›</div>
   </a>
 
   <a class="tile tile-row" href="musica.html" id="btnMusic">
-    <div class="tile-left">
-      <div class="badge">🎧</div>
-      <div class="tile-text">
-        <div class="tile-title" id="musicTitle">Listen to my music</div>
-        <div class="tile-sub" id="musicSub">Spotify • Apple Music</div>
-      </div>
+    <div class="badge" aria-hidden="true">🎧</div>
+
+    <div class="tile-text">
+      <div class="tile-title" id="musicTitle">Listen to my music</div>
+      <div class="tile-sub" id="musicSub">Spotify • Apple Music</div>
     </div>
-    <div class="chev">›</div>
+
+    <div class="chev" aria-hidden="true">›</div>
   </a>
 
   <a class="tile tile-row" href="canciones.html" id="btnSong">
-    <div class="tile-left">
-      <div class="badge">🎶</div>
-      <div class="tile-text">
-        <div class="tile-title" id="songTitle">Request a live song</div>
-        <div class="tile-sub" id="songSub">Live shows only</div>
-      </div>
+    <div class="badge" aria-hidden="true">🎶</div>
+
+    <div class="tile-text">
+      <div class="tile-title" id="songTitle">Request a live song</div>
+      <div class="tile-sub" id="songSub">Live shows only</div>
     </div>
-    <div class="chev">›</div>
+
+    <div class="chev" aria-hidden="true">›</div>
   </a>
 </div>
+
 
     <!-- FOOT -->
     <div class="foot" id="footer">
