--- a/canciones.html
+++ b/canciones.html
@@ -29,7 +29,8 @@
   <h1>Repertorio</h2>
   <div class="row">
     <a class="btn" href="index.html">⬅️ Home</a>
-    <a class="btn" href="propina.html">💵 Propina</a>
+    <a class="btn-metal btn-tip" href="propina.html">💵 Propina</a>
+
   </div>
   <input id="q" class="search" placeholder="Buscar por artista o canción…" autocomplete="off" />
   <div id="count" class="meta">Cargando…</div>
