--- a/canciones.html
+++ b/canciones.html
@@ -30,7 +30,7 @@
 
   <div class="row">
     <a class="btn" href="index.html">⬅️ Home</a>
-    <a class="btn-metal btn-tip" href="propina.html">💵 Propina</a>
+    <a class="btn btn-tip" href="propina.html">💵 Propina</a>
   </div>
 
   <input
