--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fabry Orihuela | Live Music</title>
+  <title>Live Music</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- FUENTES -->
