--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
       <div class="tile-title" id="merchTitle">Merch</div>
       <div class="tile-sub" id="merchSub">Shirts &amp; flash drives</div>
     </div>
+<a class="tile tile-row" href="shows.html" id="btnShows">
+  <div class="badge" aria-hidden="true">📅</div>
 
+  <div class="tile-text">
+    <div class="tile-title" id="showsTitle">Shows Calendar</div>
+    <div class="tile-sub" id="showsSub">Upcoming dates</div>
+  </div>
+
+  <div class="chev" aria-hidden="true">›</div>
+</a>
     <div class="chev" aria-hidden="true">›</div>
   </a>
 
