--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@ const t = {
     merchSub:"Shirts & flash drives",
     musicTitle:"Listen to my music",
     songTitle:"Request a live song",
+    showsTitle:"Shows Calendar",
+    showsSub:"Upcoming dates",
     footer:"Available for: Bars · Private Events · Weddings <br> Based in PA · Travel available · Response time 24–48h"
   },
   es:{
@@ -136,6 +138,8 @@ const t = {
     merchSub:"Camisetas y flash drives",
     musicTitle:"Escucha mi música",
     songTitle:"Pedir canción en vivo",
+    showsTitle:"Calendario de shows",
+    showsSub:"Próximas fechas",
     footer:"Disponible para: Bares · Eventos privados · Bodas <br> Base en PA · Viajo · Respuesta 24–48h"
   }
 };
