--- a/index.html
+++ b/index.html
@@ -64,47 +64,44 @@
     
 <!-- ===== MENU (BOTONES debajo del video) ===== -->
 <div class="menu-tiles" id="homeMenu">
+
   <a class="tile tile-row" href="merch.html" id="btnMerch">
     <div class="badge" aria-hidden="true">🛍️</div>
-
     <div class="tile-text">
       <div class="tile-title" id="merchTitle">Merch</div>
       <div class="tile-sub" id="merchSub">Shirts &amp; flash drives</div>
     </div>
-<a class="tile tile-row" href="shows.html" id="btnShows">
-  <div class="badge" aria-hidden="true">📅</div>
-
-  <div class="tile-text">
-    <div class="tile-title" id="showsTitle">Shows Calendar</div>
-    <div class="tile-sub" id="showsSub">Upcoming dates</div>
-  </div>
-
-  <div class="chev" aria-hidden="true">›</div>
-</a>
     <div class="chev" aria-hidden="true">›</div>
   </a>
 
   <a class="tile tile-row" href="musica.html" id="btnMusic">
     <div class="badge" aria-hidden="true">🎧</div>
-
     <div class="tile-text">
       <div class="tile-title" id="musicTitle">Listen to my music</div>
       <div class="tile-sub" id="musicSub">Spotify • Apple Music</div>
     </div>
-
     <div class="chev" aria-hidden="true">›</div>
   </a>
 
   <a class="tile tile-row" href="canciones.html" id="btnSong">
     <div class="badge" aria-hidden="true">🎶</div>
-
     <div class="tile-text">
       <div class="tile-title" id="songTitle">Request a live song</div>
       <div class="tile-sub" id="songSub">Live shows only</div>
     </div>
-
     <div class="chev" aria-hidden="true">›</div>
   </a>
+
+  <!-- ✅ SHOWS CALENDAR (NUEVO) -->
+  <a class="tile tile-row" href="shows.html" id="btnShows">
+    <div class="badge" aria-hidden="true">📅</div>
+    <div class="tile-text">
+      <div class="tile-title" id="showsTitle">Shows Calendar</div>
+      <div class="tile-sub" id="showsSub">Upcoming dates</div>
+    </div>
+    <div class="chev" aria-hidden="true">›</div>
+  </a>
+
 </div>
 
 
