--- a/index.html
+++ b/index.html
@@ -92,17 +92,17 @@
     <div class="chev" aria-hidden="true">›</div>
   </a>
 
-  <!-- ✅ SHOWS CALENDAR (NUEVO) -->
+    <!-- SHOWS CALENDAR -->
   <a class="tile tile-row" href="shows.html" id="btnShows">
     <div class="badge" aria-hidden="true">📅</div>
+
     <div class="tile-text">
       <div class="tile-title" id="showsTitle">Shows Calendar</div>
       <div class="tile-sub" id="showsSub">Upcoming dates</div>
     </div>
+
     <div class="chev" aria-hidden="true">›</div>
   </a>
-
-</div>
 
 
     <!-- FOOT -->
