Actualizar booking.html

--- a/booking.html
+++ b/booking.html
@@ -71,10 +71,15 @@
         </label>
 
         <!-- Botón ROJO consistente -->
-        <button type="submit" class="button">
-          ✅ Enviar por WhatsApp
-        </button>
-      </form>
+        <div class="booking-actions">
+  <a class="btn-red btn-send" href="#" id="sendWhatsApp">
+    ✅ Enviar por WhatsApp
+  </a>
+
+  <a class="btn-red btn-back" href="index.html">
+    ⬅️ Volver
+  </a>
+</div>
 
       <a href="index.html" class="button">⬅️ Volver</a>
 
