Actualizar merch.html

--- a/merch.html
+++ b/merch.html
@@ -22,13 +22,13 @@
         <p style="margin:0 0 6px; font-weight:900; font-size:18px;">$25</p>
         <p>Algodón premium • Unisex</p>
 
-        <div class="mini-slider" aria-label="Galería camiseta">
-          <div class="mini-track">
-            <img src="img/camiseta-1.jpg" alt="Camiseta vista 1">
-            <img src="img/camiseta-2.jpg" alt="Camiseta vista 2">
-            <img src="img/camiseta-3.jpg" alt="Camiseta vista 3">
-          </div>
-        </div>
+        <div class="mini-slider">
+  <div class="mini-track">
+    <img src="img/camiseta-1.jpg" alt="Camiseta 1" data-zoom>
+    <img src="img/camiseta-2.jpg" alt="Camiseta 2" data-zoom>
+    <img src="img/camiseta-3.jpg" alt="Camiseta 3" data-zoom>
+  </div>
+</div>
 
         <a class="btn-pro"
            href="https://wa.me/14845442917?text=Hola%20Fabry%2C%20quiero%20comprar%20la%20CAMISETA%20OFICIAL%20(%2425).%0ATalla%3A%20__%0ACantidad%3A%20__%0AEntrega%20(en%20show%20o%20env%C3%ADo)%3A%20__"
