Actualizar merch.html

--- a/merch.html
+++ b/merch.html
@@ -77,3 +77,8 @@
   </div>
 </body>
 </html>
+<!-- ===== LIGHTBOX ===== -->
+<div class="lightbox" id="lightbox">
+  <span class="lightbox-close">✕</span>
+  <img class="lightbox-img" id="lightboxImg" src="" alt="">
+</div>
