Actualizar merch.html

--- a/merch.html
+++ b/merch.html
@@ -98,10 +98,11 @@
     }
   });
 </script>
-</body> 
-</html>
-<!-- ===== LIGHTBOX ===== -->
+<!-- LIGHTBOX -->
 <div class="lightbox" id="lightbox">
-  <span class="lightbox-close">✕</span>
+  <button class="lightbox-close" type="button" aria-label="Cerrar">✕</button>
   <img class="lightbox-img" id="lightboxImg" src="" alt="">
 </div>
+</body> 
+</html>
+
