Actualizar propina.html

--- a/propina.html
+++ b/propina.html
@@ -35,6 +35,9 @@
 
       <small>🔎 Zelle no abre link directo en todos los teléfonos, por eso mostramos el número.</small>
     </div>
+        <a href="redes.html" class="btn btn-follow">
+      📲 Sígueme en mis redes sociales
+    </a>
 
     <a class="skip" href="index.html">Omitir / Skip</a>
   </div>
