Actualizar propina.html

--- a/propina.html
+++ b/propina.html
@@ -57,8 +57,8 @@
 
 <body>
   <div class="wrap">
-    <h1>💵 Muchas gracias por tu aporte 🤗</h1>
-    <p>Propina sugerida (opcional). Elige tu método:</p>
+    <h1 class="tip-title">Propina opcional</h1>
+<p class="tip-sub">Gracias por tu apoyo 🙌</p>
 
     <div class="card">
       <div class="row">
