--- a/propina.html
+++ b/propina.html
@@ -6,6 +6,41 @@
   <title>Propina | Fabry Orihuela</title>
 
   <style>
+  /* ===== TITULOS ===== */
+.tip-title{
+  text-align:center;
+  font-size:26px;
+  font-weight:800;
+  margin-bottom:6px;
+}
+
+.tip-sub{
+  text-align:center;
+  font-size:15px;
+  color:var(--muted);
+  margin-bottom:18px;
+}
+
+/* ===== TARJETA ===== */
+.card{
+  max-width:420px;
+  margin:0 auto;
+}
+
+/* ===== FILAS DE BOTONES ===== */
+.row{
+  justify-content:center;
+}
+
+/* ===== BOTON FOLLOW ===== */
+.btn-follow{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  margin:18px auto 6px;
+  width:100%;
+  max-width:420px;
+}
     :root{ --bg:#0b0b0f; --card:#14141c; --txt:#f3f3f5; --muted:#a7a7b3; --red:#e11d2e; }
     body{ margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial; background:var(--bg); color:var(--txt); }
     .wrap{ padding:18px 16px 28px; max-width:520px; margin:0 auto; }
